<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Гимназия №147</string>
    <string name="menu_item_schedule">Расписание</string>
    <string name="menu_item_marks">Оценки</string>
    <string name="menu_item_school">Школа</string>
    <string name="menu_item_settings">Настройки</string>
    <string name="sun_text">Тема</string>
    <string name="hello">Приложение школы, которое поможет всегда узнавать о новых оценках и домашнем, не забывать о внеурочных занятиях и быть в курсе всех мероприятий</string>

    <string name="error_login">Произошла ошибка при попытке авторизоваться</string>
    <string name="error_api">Произошла ошибка на сервере…</string>
    <string name="error_load_schedule">Произошла ошибка при загрузке расписания</string>
    <string name="error_internet">Нет подключения к интернету</string>
    <string name="error_incorrect_data">Произошла ошибка при общении с сервером. Обратитесь в поддержку</string>

    <string name="default_bells_schedule">08:00 – 09:35</string>
    <string name="default_place">101</string>
    <string name="default_subject">Математика</string>
    <string name="homework_emoji">✏️</string>
    <string name="homework_document_emoji">📎</string>
    <string name="homework_not_found">Нет домашнего задания</string>
    <string name="homework_document_not_found">Нет дополнительных ресурсов</string>
    <string name="default_day_number">1</string>
    <string name="default_weekday">ПН</string>
    <string name="dnevnik_text">Дневник</string>
    <string name="login_with_dnevnik">Войти через Дневник.ру</string>
    <string name="weekend_text">Выходные</string>

    <string name="settings">Настройки</string>
    <string name="account">Аккаунт</string>
    <string name="about">О приложении</string>
    <string name="open_site">Открыть сайт</string>
    <string name="settings_webview">Открывать файлы в приложении</string>
    <string name="settings_ea">Уведомлять о внеурочных занятиях</string>
    <string name="settings_theme">Использовать темную тему</string>
    <string name="update">Обновление</string>
    <string name="update_button">Обновить</string>
    <string name="logout">Выйти из профиля</string>
    <string name="app_info">Удобно и бесплатно пользуйтесь возможностями дневника.ру в своем телефоне и всегда знайте новости школы</string>
    <string name="account_info">Ваш профиль в приложении связан с аккаунтом в дневнике.ру. Все предоставленные данные используются только в целях работы приложения</string>
    <string name="important_update">Изменено взаимодействие с сервером. Для корректной работы требуется обновить приложение.</string>
</resources>